import groovy.json.JsonSlurper

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ed'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    avroTools
}

repositories {
    mavenCentral()
    maven {
        url = uri("https://packages.confluent.io/maven")
    }
}

dependencies {
    // web
    implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
    implementation "org.springframework.boot:spring-boot-starter-thymeleaf:${springBootVersion}"
    implementation "org.springframework.boot:spring-boot-starter-validation:${springBootVersion}"

    // db
    implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
    runtimeOnly "com.mysql:mysql-connector-j:${mysqlConnectorVersion}"

    // kafka
    implementation "com.google.code.gson:gson:${gsonVersion}"
    implementation "org.springframework.kafka:spring-kafka:${springKafkaVersion}"
    testImplementation "org.springframework.kafka:spring-kafka-test:${springKafkaVersion}"
    avroTools "org.apache.avro:avro-tools:${avroToolsVersion}"
    implementation "io.confluent:kafka-avro-serializer:${kafkaAvroSerializerVersion}"

    // eureka
    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:${springCloudVersion}"

    // lombok
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    // test
    testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher:${junitPlatformVersion}"
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '-XX:+EnableDynamicAgentLoading'
}

sourceSets {
    main {
        java {
            srcDir 'build/generated-src'
        }
    }
}

tasks.register("fetchSchemas") {
    group = "build"
    description = "Downloads AVSC files from Confluent Schema Registry with wildcard filtering"

    def schemaRegistryUrl = "http://localhost:8081"
    def subjectPattern = ~/^order_payment_.*-value$/
    def outputDir = file("src/main/avro")

    inputs.property("schemaRegistryUrl", schemaRegistryUrl)
    inputs.property("subjectPattern", subjectPattern.toString())
    outputs.dir(outputDir)

    doLast {
        outputDir.mkdirs()

        def allSubjects = new URL("${schemaRegistryUrl}/subjects").text
        def subjectList = new JsonSlurper().parseText(allSubjects)

        def matchedSubjects = subjectList.findAll { it ==~ subjectPattern }
        println "Matched subjects: ${matchedSubjects}"

        matchedSubjects.each { subject ->
            def schemaUrl = "${schemaRegistryUrl}/subjects/${subject}/versions/latest"
            def response = new URL(schemaUrl).text
            def schema = new JsonSlurper().parseText(response).schema

            def fileName = subject.replaceAll('-value$', "") + ".avsc"
            def avscFile = new File(outputDir, fileName)
            avscFile.text = schema
        }
    }
}

tasks.register("generateAvroJava", JavaExec) {
    group = "build"
    description = "Compiles Avro schemas into Java classes"
    mainClass.set("org.apache.avro.tool.Main")
    classpath = configurations.avroTools

    def avroFiles = fileTree("src/main/avro").include("*.avsc")
    args = ["compile", "-string", "schema"] + avroFiles.collect { it } + ["build/generated-src"]
    dependsOn("fetchSchemas")
}

tasks.named("compileJava") {
    dependsOn("generateAvroJava")
}

ext {
    set('springCloudVersion', "2024.0.0")
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}